google guava clean up all except caching